--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "check": "deno check --allow-import=deno.land,registry.npmjs.org,cdn.skypack.dev,lib.deno.dev,jsr.io --no-npm supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts",
+    "check": "DENO_TLS_CA_STORE=system deno check --allow-import=deno.land,registry.npmjs.org,cdn.skypack.dev,lib.deno.dev,jsr.io --no-npm supabase/functions/telegram-bot/*.ts supabase/functions/telegram-bot/**/*.ts",
     "serve": "supabase functions serve",
     "fmt": "bash -lc '$(bash scripts/deno_bin.sh) fmt --check .'",
     "fmt:write": "bash -lc '$(bash scripts/deno_bin.sh) fmt .'",
