--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -45,7 +45,7 @@
       "name": "Market Review",
       "short_name": "Review",
       "url": "/tools/dynamic-market-review",
-      "description": "Launch the Dynamic Market Review heatmap and analytics workspace."
+      "description": "Open the Market Review workspace with session-aware presets that rebalance heatmaps, watchlists, and coverage grids."
     }
   ],
   "related_applications": [
