--- a/project.toml
+++ b/project.toml
@@ -30,23 +30,23 @@ version = "0.0.0"
 
   [[build.env]]
     name = "ALLOWED_ORIGINS"
-    value = "https://dynamic.capital,https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://ton.site,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-git-dynamic-capital-a2ae79-the-project-archive.vercel.app,https://dynamic-capital-kp5fqeegn-the-project-archive.vercel.app,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app,https://ton-gateway.dynamic-capital.ondigitalocean.app,https://ton-gateway.dynamic-capital.lovable.app,https://t.me"
+    value = "https://dynamic.capital,https://dynamiccapital.ton,https://www.dynamiccapital.ton,https://ton.site,https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic-capital-git-dynamic-capital-a2ae79-the-project-archive.vercel.app,https://dynamic-capital-kp5fqeegn-the-project-archive.vercel.app,https://dynamic-capital.vercel.app,https://dynamic-capital.lovable.app,https://ton-gateway.dynamic-capital.ondigitalocean.app,https://ton-gateway.dynamic-capital.lovable.app,https://t.me,https://t.me/Dynamic_VIP_BOT/dynamic_pay"
 
   [[build.env]]
     name = "SITE_URL"
-    value = "https://dynamic.capital"
+    value = "https://dynamic-capital.ondigitalocean.app"
 
   [[build.env]]
     name = "NEXT_PUBLIC_SITE_URL"
-    value = "https://dynamic.capital"
+    value = "https://dynamic-capital.ondigitalocean.app"
 
   [[build.env]]
     name = "MINIAPP_ORIGIN"
-    value = "https://dynamiccapital.ton,https://dynamic.capital,https://t.me"
+    value = "https://dynamic-capital-qazf2.ondigitalocean.app,https://dynamic-capital.ondigitalocean.app,https://dynamic.capital,https://dynamiccapital.ton,https://t.me,https://t.me/Dynamic_VIP_BOT/dynamic_pay"
 
   [[build.env]]
     name = "TELEGRAM_WEBHOOK_URL"
-    value = "https://dynamiccapital.ton/webhook"
+    value = "https://dynamic-capital.ondigitalocean.app/webhook"
 
   [[build.env]]
     name = "NEXT_TELEMETRY_DISABLED"
