refactor: prepare miniapp for once ui

--- a/dynamic-capital-ton/apps/miniapp/tsconfig.json
+++ b/dynamic-capital-ton/apps/miniapp/tsconfig.json
@@ -4,9 +4,12 @@
     "module": "ESNext",
     "strict": true,
     "jsx": "preserve",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "baseUrl": ".",
     "paths": {
+      "@/*": [
+        "./src/*"
+      ],
       "@shared/*": [
         "../../../shared/*"
       ]
