Enhance theme gallery with palette previews

--- a/dynamic-capital-ton/apps/miniapp/tsconfig.json
+++ b/dynamic-capital-ton/apps/miniapp/tsconfig.json
@@ -4,9 +4,12 @@
     "module": "ESNext",
     "strict": true,
     "jsx": "preserve",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "baseUrl": ".",
     "paths": {
+      "@/*": [
+        "./src/*"
+      ],
       "@shared/*": [
         "../../../shared/*"
       ]
@@ -35,8 +38,7 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
+    "src/**/*",
     ".next/types/**/*.ts"
   ],
   "exclude": [
