--- a/dynamic-capital-ton/apps/miniapp/package.json
+++ b/dynamic-capital-ton/apps/miniapp/package.json
@@ -7,12 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@once-ui-system/core": "^1.4.12",
     "@supabase/supabase-js": "^2.74.0",
     "@ton/core": "^0.58.1",
     "@tonconnect/ui-react": "^2.3.1",
     "buffer": "^6.0.3",
-    "next": "^15.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "classnames": "^2.5.1",
+    "next": "15.3.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-icons": "^5.2.1",
+    "sass": "^1.77.6",
+    "sharp": "^0.33.5"
   }
 }
