Enforce required env vars for NextAuth and Telegram

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE=
 # Backwards compatibility alias kept for existing scripts
 SUPABASE_SERVICE_ROLE_KEY=
+# Used by NextAuth's Supabase adapter. Provide the production service role key via secrets management.
 SUPABASE_DB_URL=
 SUPABASE_FN_URL=
 SUPABASE_ACCESS_TOKEN=
@@ -194,9 +195,11 @@ A_SUPABASE_URL=
 A_SUPABASE_KEY=
 
 # GitHub OAuth (NextAuth)
+# Required for the GitHub login provider in NextAuth. Use sandbox credentials for local runs.
 GITHUB_PAT=
 GITHUB_REPO=
 GITHUB_DEFAULT_BRANCH=
+# OAuth app keys must be present for production and CI builds.
 GITHUB_ID=
 GH_TOKEN=
 GITHUB_SECRET=
