feat: add dynamic ai rate limiting and telemetry

--- a/.env.example
+++ b/.env.example
@@ -150,6 +150,10 @@ FAQ_ENABLED=false
 DYNAMIC_AI_CHAT_URL=
 DYNAMIC_AI_CHAT_KEY=
 DYNAMIC_AI_CHAT_TIMEOUT_MS=30000
+DYNAMIC_AI_CHAT_USER_LIMIT=20
+DYNAMIC_AI_CHAT_USER_WINDOW_SECONDS=60
+DYNAMIC_AI_CHAT_SESSION_LIMIT=60
+DYNAMIC_AI_CHAT_SESSION_WINDOW_SECONDS=300
 DYNAMIC_AGI_CHAT_URL=
 DYNAMIC_AGI_CHAT_KEY=
 DYNAMIC_AGI_CHAT_TIMEOUT_MS=45000
