--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,6 +67,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.90.2",
+    "@upstash/ratelimit": "^2.0.6",
     "@vercel/otel": "^2.0.1",
     "@vercel/speed-insights": "^1.2.0",
     "@web3-onboard/bitget": "^2.1.1",
