Document session lifecycle env variables

--- a/supabase/functions/.env.example
+++ b/supabase/functions/.env.example
@@ -21,6 +21,11 @@ MINI_APP_SHORT_NAME=
 MINIAPP_ORIGIN=
 ADMIN_API_SECRET=
 SESSION_JWT_SECRET=
+
+# Session lifecycle configuration
+SESSION_TIMEOUT_MINUTES=30
+FOLLOW_UP_DELAY_MINUTES=10
+MAX_FOLLOW_UPS=3
 OPENAI_API_KEY=
 OPENAI_WEBHOOK_SECRET=
 OPENAI_ENABLED=
