--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,11 @@ MINIAPP_ORIGIN=
 SESSION_JWT_SECRET=
 ADMIN_API_SECRET=
 
+# Session lifecycle configuration
+SESSION_TIMEOUT_MINUTES=30
+FOLLOW_UP_DELAY_MINUTES=10
+MAX_FOLLOW_UPS=3
+
 # Payments
 BINANCE_PAY_API_KEY=
 BINANCE_PAY_SECRET=
