--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "@tact-lang/compiler": "^1.6.13",
     "@testing-library/jest-dom": "^6.6.3",
     "@ton-community/func-js": "^0.10.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
     "axios": "^1.12.2",
     "chokidar-cli": "^3.0.0",
     "deno": "^2.5.0",
