--- a/package.json
+++ b/package.json
@@ -110,6 +110,8 @@
     "ton:build-site-predeploy": "tsx tools/ton/build-site-predeploy.ts",
     "ton:build-contracts": "tsx tools/ton/build-contract-suite.ts",
     "ton:build-verifier": "$(bash scripts/deno_bin.sh) run -A dynamic-capital-ton/apps/tools/build-ton-verifier.ts"
+    ,
+    "windows:sanitize": "node scripts/windows/sparse-checkout-sanitize.mjs"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
