--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "codex:verify": "node scripts/codex-workflow.js verify",
     "lint": "node scripts/npm-safe.mjs -w apps/web run lint",
     "lint:paths": "node scripts/ci/check-windows-filenames.mjs",
+    "fix:windows-filenames": "node scripts/maintenance/auto-rename-windows-invalid.mjs",
     "format": "deno fmt apps supabase scripts db docs",
     "typecheck": "node scripts/npm-safe.mjs -w apps/web run typecheck",
     "review": "python -m pytest algorithms/python/tests/test_review_and_optimize.py",
