Add OpenWebUI/Ollama Docker setup and bot security features
Introduces Docker Compose files and npm scripts for OpenWebUI and Ollama integration. Adds environment variables for Ollama and OpenWebUI configuration. Implements local Ollama fallback in Telegram bot, refactors bot startup, and adds advanced rate limiting, spam, and security protections to Telegram bot functions. Updates documentation and setup scripts for Windows and WSL environments.

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,11 @@ LOGTAIL_URL=
 LOG_LEVEL=
 NODE_EXTRA_CA_CERTS=
 
+# Tunneling (ngrok)
+# Provide your ngrok authtoken for authenticated tunnels.
+# Never commit real secrets; set at runtime or via local env.
+NGROK_AUTHTOKEN=
+
 # Domains and routing
 DOMAIN=example.com
 SITE_URL=https://example.com/
@@ -165,6 +170,21 @@ DYNAMIC_AGI_CHAT_TIMEOUT_MS=45000
 DYNAMIC_AGS_PLAYBOOK_URL=
 DYNAMIC_AGS_PLAYBOOK_KEY=
 DYNAMIC_AGS_TIMEOUT_MS=45000
+
+# Ollama (local LLM runner) – optional developer overrides
+# Enable Edge Function fallback to local/self-hosted Ollama for AI responses.
+OLLAMA_ENABLED=false
+# Host to reach the local Ollama API
+OLLAMA_HOST=http://127.0.0.1:11434
+# Override model tags per role used by tools/ai scripts and bot fallback
+OLLAMA_MODEL_AI=deepseek-r1-codex:8b
+OLLAMA_MODEL_AGI=gpt-oss:120b-cloud
+OLLAMA_MODEL_AGENTS=qwen2.5:0.5b
+
+# Open WebUI + Ollama docker-tooling ports (tools/openwebui)
+# Override if you need different host ports locally.
+OPEN_WEBUI_PORT=8090
+OLLAMA_PORT=11434
 
 # Economic data providers
 FRED_API_KEY=
