--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
     "scan:build-modules": "tsx scripts/python/scan-missing-build-modules.ts",
     "create:build-modules": "tsx scripts/python/create-missing-build-modules.ts",
     "scan:checklists": "tsx scripts/scan-checklists.ts",
+    "openwebui:up": "docker compose -f tools/openwebui/docker-compose.yml up -d",
+    "openwebui:down": "docker compose -f tools/openwebui/docker-compose.yml down",
+    "openwebui:logs": "docker compose -f tools/openwebui/docker-compose.yml logs -f",
     "crawlers:install": "node scripts/install-crawlers.mjs",
     "do:sync-site": "node scripts/digitalocean/sync-site-config.mjs",
     "do:sync-cdn": "node scripts/digitalocean/sync-cdn-config.mjs",
