--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -74,6 +74,7 @@
     "@web3-onboard/common": "^2.4.2",
     "@web3-onboard/core": "^2.24.1",
     "@web3-onboard/injected-wallets": "^2.11.3",
+    "@tailwindcss/filters": "npm:tailwindcss-filters@^3.0.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
