chore: upgrade npm dependencies

--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "lucide-react": "^0.544.0",
     "mime-types": "^3.0.1",
     "next-auth": "^4.24.11",
+    "nodemailer": "^7.0.7",
     "openai": "^4.67.3",
     "pdf-parse": "^1.1.1",
     "posthog-js": "^1.268.8",
@@ -217,7 +218,7 @@
     "esbuild-register": {
       "esbuild": "npm:esbuild@0.25.11"
     },
-    "@auth/core": "^0.36.0",
+    "@auth/core": "^0.41.1",
     "elliptic": "^6.6.1",
     "svelte": "^4.2.19",
     "ws": "^8.18.3",
