Use repo deno shim for formatting

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lint": "node scripts/npm-safe.mjs -w apps/web run lint",
     "lint:paths": "node scripts/ci/check-windows-filenames.mjs",
     "fix:windows-filenames": "node scripts/maintenance/auto-rename-windows-invalid.mjs",
-    "format": "deno fmt apps supabase scripts db docs",
+    "format": "$(bash scripts/deno_bin.sh) fmt apps supabase scripts db docs",
     "typecheck": "node scripts/npm-safe.mjs -w apps/web run typecheck",
     "review": "python -m pytest algorithms/python/tests/test_review_and_optimize.py",
     "project:review": "python automation/run_project_review.py",
